# CryptoVault

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: feature_demo.cpp
src/: AES.h  AES_CTR.cpp  AES_CTR.h  AuthenticatedEncryption.cpp  AuthenticatedEncryption.h  Base64.cpp  Base64.h  FileEncryption.cpp  FileEncryption.h  HMAC.cpp  HMAC.h  KeyManager.cpp  KeyManager.h  PBKDF2.cpp  PBKDF2.h  Padding.cpp  Padding.h  SecureContainer.cpp  SecureContainer.h  StreamCipher.cpp  StreamCipher.h
